# kumoriya

./: .codeiumignore  .gitignore  AGENTS.md  CHANGELOG.md  CLOUDY_COZY_MIGRATION_HANDOFF.md  LICENSE  README.md  analyze_check.txt  analyze_err.txt  analyze_out.txt  anilist_tag_translation_gap_report.txt  anilist_tags_snapshot.json  aniskip_probe_results.txt  debug_aniskip_standalone.dart  kumoriya-design-system (1).html  kumoriya-widget-proposals.html  kumoriya_massive_prompt.md  logs.txt  pubspec.yaml  test_mediafire_probe.dart  test_okru_out.txt  test_output.txt  test_uri.dart
.agents/: GUIDE.md  README.md  rules.yaml  system_index.json
.codex/: config.toml
Sentry issues/: 1.txt
docs/: 00-codex-stack.md  10-system-design.md  20-mcp-strategy.md  30-skills-strategy.md  40-git-worktrees-automations.md  50-kumoriya-architecture.md  55-plugin-contracts.md  60-roadmap.md  70-skill-creation-playbook.md  80-deferred-work.md  90-uiux-agents-master-prompt.md  ARCHITECTURE.md  BACKEND.md  CI_CD.md  DATA_FLOW.md  EDGE_INFRASTRUCTURE.md  FRONTEND.md  KUMORIYA_DESIGN_SYSTEM.md  PLUGIN_SYSTEM.md  TESTING.md  apk-size-analysis.md  design-system.md  kumoriya-exoplayer-plan.md  kumoriya_design_system_v2.md  manga-source-coverage-plan.md  r2-aws-credentials-guide.md  resolver_alias_evidence_2026-03-08.md  (+3 more)
tools/kumoriya-orch/: README.md  pyproject.toml
tools/kumoriya-orch/src/kumoriya_orch/: __init__.py  index.py  minimize.py  mutation.py  paths.py  preflight.py  retry.py  runners.py  scheduler.py  server.py  store.py
tools/kumoriya-orch/tests/: test_smoke_slugify.py
(+744 files in other folders)
