[project]
name = "kumoriya-orch"
version = "0.1.0"
description = "Kumoriya orchestration MCP: task queue, preflight, runners, reviewer state, system_index."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pyyaml>=6.0",
    "pydantic>=2.6",
]

[project.scripts]
kumoriya-orch = "kumoriya_orch.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kumoriya_orch"]
